--- a/nytingdalecare.co.uk-html/faq.html
+++ b/nytingdalecare.co.uk-html/faq.html
@@ -6,13 +6,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Our Faq’s || Nytingdalecare || Home, Senior & Medical Care</title>
+    <title>FAQs - Home, Senior & Medical Care | Nytingdale Care Pontyclun & Bridgend</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Careold is an amazing HTML designed template for all Senior Care & Medical, Elderly care, Orphanages, retirement home, elder living, palliative care, medical, healthcare, nursing home and any other caregiver or charity website." />
+    <meta name="description" content="Frequently asked questions about Nytingdale Care's home care, senior care, and medical services in Pontyclun, Bridgend, and CF72. Get answers about our services, pricing, and caregiving approach." />
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
@@ -136,12 +136,11 @@ Pontyclun CF72 4AD
                                 <a href="#">Services</a>
                                 <ul>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-companion.html">Companion Care</a></li>
-                                    <li><a href="service-d-personalized.html">Personalized Care</a></li>
-                                    <li><a href="service-d-disability.html">Disability Housing</a></li>
-                                    <li><a href="service-d-nursing.html">Nursing Care</a></li>
-                                    <li><a href="service-d-medical.html">Medical Checkup</a></li>
+                                    <li><a href="service-d-companion.html">Personal Care Assistance</a></li>
+                                    <li><a href="service-d-personalized.html">Medication Support</a></li>
+                                    <li><a href="service-d-disability.html">Household Duties Assistance</a></li>
+                                    <li><a href="service-d-nursing.html">Meal Preparation</a></li>
+                                    <li><a href="service-d-medical.html">Grocery Shopping</a></li>
                                     <li><a href="service-d-home.html">Home Aged Care</a></li>
                                 </ul>
                             </li>
@@ -201,14 +200,14 @@ Pontyclun CF72 4AD
             <div class="container wow fadeInUp">
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-8">
-                        <h3 class="faq-page__title sec-title__title bw-split-in-up">Questions & Answers</h3>
+                        <h3 class="faq-page__title sec-title__title bw-split-in-up">Frequently Asked Questions About Nytingdale Care</h3>
                         <p class="faq-page__text">
-                            There are many variations of passages of lorem Ipsum available but the majority have suffered alteration in some form by injected humour.
+                            Find answers to common questions about our home care, senior care, and medical services in Pontyclun, Bridgend, and the surrounding CF72 area.  If you don't see your question here, please contact us!
                         </p>
                     </div><!-- /.col-lg-8 -->
                     <div class="col-lg-4">
                         <div class="faq-page__btn">
-                            <a href="contact.html" class="careold-btn"><i>Contact</i><span>Contact</span></a>
+                            <a href="contact.html" class="careold-btn"><i>Contact</i><span>Contact Nytingdale Care</span></a>
                         </div>
                     </div><!-- /.col-lg-4 -->
                 </div><!-- /.row -->
@@ -217,17 +216,14 @@ Pontyclun CF72 4AD
                     <div class="accrodion active">
                         <div class="accrodion-title">
                             <h4>
-                                Can I Go Out With My Care Professional When Receiving Day Care At Home?
+                                Can I Go Out With My Care Professional When Receiving Day Care At Home in Pontyclun?
                                 <span class="accrodion-title__icon"></span><!-- /.accrodion-title__icon -->
                             </h4>
                         </div><!-- /.accordian-title -->
                         <div class="accrodion-content">
                             <div class="inner">
                                 <p>
-                                    Yes, your Care Professional is able to accompany you to places of interest, such as out for lunch or to the garden centre. Duis aute irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Websites should be designed to invite and
-                                    entertain users, not push them away.
+                                    Yes, your Nytingdale Care Professional is able to accompany you to places of interest in Pontyclun, Bridgend, and surrounding areas, such as out for lunch, to the garden centre, or for appointments.  We encourage social interaction and activities to enhance quality of life.
                                 </p>
                             </div><!-- /.accordian-content -->
                         </div>
@@ -235,17 +231,14 @@ Pontyclun CF72 4AD
                     <div class="accrodion">
                         <div class="accrodion-title">
                             <h4>
-                                What Training Do Care Professionals Have?
+                                What Training Do Nytingdale Care Professionals Have?
                                 <span class="accrodion-title__icon"></span><!-- /.accrodion-title__icon -->
                             </h4>
                         </div><!-- /.accordian-title -->
                         <div class="accrodion-content">
                             <div class="inner">
                                 <p>
-                                    Yes, your Care Professional is able to accompany you to places of interest, such as out for lunch or to the garden centre. Duis aute irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Websites should be designed to invite and
-                                    entertain users, not push them away.
+                                    All Nytingdale Care Professionals undergo rigorous training, including background checks, health and safety training, and specialized training in areas like dementia care, senior care, and medication administration. We ensure our caregivers are highly qualified and compassionate.
                                 </p>
                             </div><!-- /.accordian-content -->
                         </div>
@@ -253,17 +246,14 @@ Pontyclun CF72 4AD
                     <div class="accrodion">
                         <div class="accrodion-title">
                             <h4>
-                                Can AI Replace Human Marketers?
+                                How Do I Arrange Home Care Services in Bridgend or CF72?
                                 <span class="accrodion-title__icon"></span><!-- /.accrodion-title__icon -->
                             </h4>
                         </div><!-- /.accordian-title -->
                         <div class="accrodion-content">
                             <div class="inner">
                                 <p>
-                                    Yes, your Care Professional is able to accompany you to places of interest, such as out for lunch or to the garden centre. Duis aute irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Websites should be designed to invite and
-                                    entertain users, not push them away.
+                                    Contact Nytingdale Care directly by phone or through our website. We'll discuss your needs, conduct a free in-home assessment, and create a personalized care plan. We serve Pontyclun, Bridgend, Llanilid, and the wider CF72 area.
                                 </p>
                             </div><!-- /.accordian-content -->
                         </div>
@@ -271,17 +261,14 @@ Pontyclun CF72 4AD
                     <div class="accrodion">
                         <div class="accrodion-title">
                             <h4>
-                                What Social Media Platforms Are Best For My Business?
+                                What Types of Medical Care Services Does Nytingdale Care Offer?
                                 <span class="accrodion-title__icon"></span><!-- /.accrodion-title__icon -->
                             </h4>
                         </div><!-- /.accordian-title -->
                         <div class="accrodion-content">
                             <div class="inner">
                                 <p>
-                                    Yes, your Care Professional is able to accompany you to places of interest, such as out for lunch or to the garden centre. Duis aute irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Websites should be designed to invite and
-                                    entertain users, not push them away.
+                                     Nytingdale Care offers a range of medical care services, including medication management, wound care, post-operative care, and support for chronic conditions.  Our qualified nurses and caregivers work closely with your doctor to ensure your medical needs are met.
                                 </p>
                             </div><!-- /.accordian-content -->
                         </div>
@@ -289,17 +276,14 @@ Pontyclun CF72 4AD
                     <div class="accrodion">
                         <div class="accrodion-title">
                             <h4>
-                                What Makes For A Good Web Design?
+                                 Is Nytingdale Care Regulated and Inspected?
                                 <span class="accrodion-title__icon"></span><!-- /.accrodion-title__icon -->
                             </h4>
                         </div><!-- /.accordian-title -->
                         <div class="accrodion-content">
                             <div class="inner">
                                 <p>
-                                    Yes, your Care Professional is able to accompany you to places of interest, such as out for lunch or to the garden centre. Duis aute irure
-                                    dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat. Enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit,
-                                    sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Websites should be designed to invite and
-                                    entertain users, not push them away.
+                                    Yes, Nytingdale Care is fully regulated and adheres to all relevant industry standards and guidelines.  We are committed to providing the highest quality of safe and effective care.  (Add specific regulatory body information if available, e.g., "We are registered with and inspected by [Regulatory Body Name]").
                                 </p>
                             </div><!-- /.accordian-content -->
                         </div>
@@ -317,10 +301,10 @@ Pontyclun CF72 4AD
                         <div class="col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="00ms">
                             <div class="footer-widget footer-widget--about">
                                 <a href="index.html" class="footer-widget__logo">
-                                    <img src="assets/images/logo-light.png" width="185" alt="Careold HTML Template">
+                                    <img src="assets/images/logo-light.png" width="185" alt="Nytingdale Care - Compassionate Home Care in Pontyclun & Bridgend">
                                 </a>
                                 <p class="footer-widget__text">
-                                    We understand that choosing <br>the right care for yourself or your loved ones <br>is a significant decision.
+                                    We understand that choosing the right care for yourself or your loved ones in Pontyclun, Bridgend, and the surrounding CF72 area is a significant decision. Nytingdale Care offers personalized home care, senior care, and medical support.
                                 </p>
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-md-6 -->
@@ -354,7 +338,7 @@ Pontyclun CF72 4AD
                                             <img src="assets/images/resources/footer-post-2.jpg" alt="post">
                                         </div>
                                         <div class="footer-widget--post__content">
-                                            <span class="footer-widget--post__date"><i class="far fa-calendar"></i>23 jun 2024</span>
+                                            <span class="footer-widget--post__date"><i class="far fa-calendar"></i>23 Jan 2025</span>
                                             <h3 class="footer-widget--post__title"><a href="blog-details-right.html">In up So Discovery my Middleton</a></h3>
                                         </div>
                                     </li>
