--- a/nytingdalecare.co.uk-html/index-boxed.html
+++ b/nytingdalecare.co.uk-html/index-boxed.html
@@ -107,102 +107,7 @@ Pontyclun CF72 4AD
 
                             <li class="dropdown megamenu">
                                 <a href="index.html">Home</a>
-                                <ul>
-                                    <li>
-                                        <section class="home-showcase">
-                                            <div class="container">
-                                                <div class="home-showcase__inner">
-                                                    <div class="row">
-                                                        <div class="col-md-6 col-lg-3">
-                                                            <div class="demo-one__card">
-                                                                <div class="demo-one__image">
-                                                                    <img src="assets/images/careold-landing/home-1.jpg" alt="careold">
-                                                                    <div class="demo-one__btns">
-                                                                        <a href="index.html" class="careold-btn demo-one__btn">
-                                                                            <i>Multi Page</i>
-                                                                            <span>Multi Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                        <a href="index-one-page.html" class="careold-btn demo-one__btn">
-                                                                            <i>One Page</i>
-                                                                            <span>One Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                    </div><!-- /.demo-one__btns -->
-                                                                </div><!-- /.demo-one__image -->
-                                                                <div class="demo-one__content">
-                                                                    <h3 class="demo-one__title">
-                                                                        <a href="index.html">Home Page 01</a>
-                                                                    </h3><!-- /.demo-one__title -->
-                                                                </div><!-- /.demo-one__content -->
-                                                            </div><!-- /.demo-one__card -->
-                                                        </div><!-- /.col-md-6 col-lg-3 -->
-                                                        <div class="col-md-6 col-lg-3">
-                                                            <div class="demo-one__card">
-                                                                <div class="demo-one__image">
-                                                                    <img src="assets/images/careold-landing/home-2.jpg" alt="careold">
-                                                                    <div class="demo-one__btns">
-                                                                        <a href="index-2.html" class="careold-btn demo-one__btn">
-                                                                            <i>Multi Page</i>
-                                                                            <span>Multi Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                        <a href="index-2-one-page.html" class="careold-btn demo-one__btn">
-                                                                            <i>One Page</i>
-                                                                            <span>One Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                    </div><!-- /.demo-one__btns -->
-                                                                </div><!-- /.demo-one__image -->
-                                                                <div class="demo-one__content">
-                                                                    <h3 class="demo-one__title">
-                                                                        <a href="index-2.html">Home Page 02</a>
-                                                                    </h3><!-- /.demo-one__title -->
-                                                                </div><!-- /.demo-one__content -->
-                                                            </div><!-- /.demo-one__card -->
-                                                        </div><!-- /.col-md-6 col-lg-3 -->
-                                                        <div class="col-md-6 col-lg-3">
-                                                            <div class="demo-one__card">
-                                                                <div class="demo-one__image">
-                                                                    <img src="assets/images/careold-landing/home-3.jpg" alt="careold">
-                                                                    <div class="demo-one__btns">
-                                                                        <a href="index-3.html" class="careold-btn demo-one__btn">
-                                                                            <i>Multi Page</i>
-                                                                            <span>Multi Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                        <a href="index-3-one-page.html" class="careold-btn demo-one__btn">
-                                                                            <i>One Page</i>
-                                                                            <span>One Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                    </div><!-- /.demo-one__btns -->
-                                                                </div><!-- /.demo-one__image -->
-                                                                <div class="demo-one__content">
-                                                                    <h3 class="demo-one__title">
-                                                                        <a href="index-3.html">Home Page 03</a>
-                                                                    </h3><!-- /.demo-one__title -->
-                                                                </div><!-- /.demo-one__content -->
-                                                            </div><!-- /.demo-one__card -->
-                                                        </div><!-- /.col-md-6 col-lg-3 -->
-                                                        <div class="col-md-6 col-lg-3">
-                                                            <div class="demo-one__card">
-                                                                <div class="demo-one__image">
-                                                                    <img src="assets/images/careold-landing/home-rtl.jpg" alt="careold">
-                                                                    <div class="demo-one__btns">
-                                                                        <a href="index-rtl.html#googtrans(en%7car)" class="careold-btn demo-one__btn">
-                                                                            <i>View Page</i>
-                                                                            <span>View Page</span>
-                                                                        </a><!-- /.thm-btn demo-one__btn -->
-                                                                    </div><!-- /.demo-one__btns -->
-                                                                </div><!-- /.demo-one__image -->
-                                                                <div class="demo-one__content">
-                                                                    <h3 class="demo-one__title">
-                                                                        <a href="index-rtl.html#googtrans(en%7car)">Home RTL</a>
-                                                                    </h3><!-- /.demo-one__title -->
-                                                                </div><!-- /.demo-one__content -->
-                                                            </div><!-- /.demo-one__card -->
-                                                        </div><!-- /.col-md-6 col-lg-3 -->
-                                                    </div><!-- /.row -->
-                                                </div><!-- /.home-showcase__inner -->
-                                            </div><!-- /.container -->
-                                        </section>
-                                    </li>
-                                </ul>
+                                
                             </li>
 
 
@@ -231,12 +136,11 @@ Pontyclun CF72 4AD
                                 <a href="#">Services</a>
                                 <ul>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-companion.html">Companion Care</a></li>
-                                    <li><a href="service-d-personalized.html">Personalized Care</a></li>
-                                    <li><a href="service-d-disability.html">Disability Housing</a></li>
-                                    <li><a href="service-d-nursing.html">Nursing Care</a></li>
-                                    <li><a href="service-d-medical.html">Medical Checkup</a></li>
+                                    <li><a href="service-d-companion.html">Personal Care Assistance</a></li>
+                                    <li><a href="service-d-personalized.html">Medication Support</a></li>
+                                    <li><a href="service-d-disability.html">Household Duties Assistance</a></li>
+                                    <li><a href="service-d-nursing.html">Meal Preparation</a></li>
+                                    <li><a href="service-d-medical.html">Grocery Shopping</a></li>
                                     <li><a href="service-d-home.html">Home Aged Care</a></li>
                                 </ul>
                             </li>
