--- a/nytingdalecare.co.uk-html/services.html
+++ b/nytingdalecare.co.uk-html/services.html
@@ -6,14 +6,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Services || Nytingdalecare || Home, Senior & Medical Care</title>
+    <title>Home Care, Senior Care & Medical Services | Nytingdale Care (Pontyclun & Bridgend)</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Careold is an amazing HTML designed template for all Senior Care & Medical, Elderly care, Orphanages, retirement home, elder living, palliative care, medical, healthcare, nursing home and any other caregiver or charity website." />
-
+    <meta name="description" content="Nytingdale Care provides compassionate home care, senior care, and medical services in Pontyclun, Bridgend, Llanilid, and CF72.  Learn about our personalized care plans." />
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -136,12 +135,11 @@ Pontyclun CF72 4AD
                                 <a href="#">Services</a>
                                 <ul>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-companion.html">Companion Care</a></li>
-                                    <li><a href="service-d-personalized.html">Personalized Care</a></li>
-                                    <li><a href="service-d-disability.html">Disability Housing</a></li>
-                                    <li><a href="service-d-nursing.html">Nursing Care</a></li>
-                                    <li><a href="service-d-medical.html">Medical Checkup</a></li>
+                                    <li><a href="service-d-companion.html">Personal Care Assistance</a></li>
+                                    <li><a href="service-d-personalized.html">Medication Support</a></li>
+                                    <li><a href="service-d-disability.html">Household Duties Assistance</a></li>
+                                    <li><a href="service-d-nursing.html">Meal Preparation</a></li>
+                                    <li><a href="service-d-medical.html">Grocery Shopping</a></li>
                                     <li><a href="service-d-home.html">Home Aged Care</a></li>
                                 </ul>
                             </li>
@@ -205,14 +203,14 @@ Pontyclun CF72 4AD
                         <div class="service-two__item wow fadeInUp" data-wow-delay="00ms">
                             <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
                             <div class="service-two__item__image">
-                                <img src="assets/images/resources/service-2-1.jpg" alt="careold">
+                                <img src="assets/images/resources/service-2-1.jpg" alt="Nytingdale Care - Personal Care Assistance in Pontyclun & Bridgend">
                             </div>
                             <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
                             <h3 class="service-two__item__title">
-                                <a href="service-d-companion.html">Companion Care</a>
+                                <a href="service-d-companion.html">Personal Care Assistance</a>
                             </h3><!-- /.service-title -->
                             <p class="service-two__item__text">
-                                Lorem ipsum dolor sit amet lorem etur adipiscing elit sed do eiusmod
+                                Our compassionate caregivers provide respectful assistance with bathing, dressing, grooming, and toileting, promoting dignity and independence for seniors in Pontyclun and Bridgend.
                             </p>
                             <a href="service-d-companion.html" class="service-two__item__link">
                                 Learn More
@@ -224,14 +222,14 @@ Pontyclun CF72 4AD
                         <div class="service-two__item wow fadeInUp" data-wow-delay="100ms">
                             <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
                             <div class="service-two__item__image">
-                                <img src="assets/images/resources/service-2-2.jpg" alt="careold">
+                                <img src="assets/images/resources/service-2-2.jpg" alt="Nytingdale Care - Medication Support and Reminders">
                             </div>
                             <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
                             <h3 class="service-two__item__title">
-                                <a href="service-d-personalized.html">Personalized Care</a>
+                                <a href="service-d-personalized.html">Medication Support</a>
                             </h3><!-- /.service-title -->
                             <p class="service-two__item__text">
-                                Lorem ipsum dolor sit amet lorem etur adipiscing elit sed do eiusmod
+                                We provide reliable medication reminders and assistance with medication management, ensuring our clients in the CF72 area take their medications safely and on time.
                             </p>
                             <a href="service-d-personalized.html" class="service-two__item__link">
                                 Learn More
@@ -243,14 +241,14 @@ Pontyclun CF72 4AD
                         <div class="service-two__item wow fadeInUp" data-wow-delay="200ms">
                             <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
                             <div class="service-two__item__image">
-                                <img src="assets/images/resources/service-2-3.jpg" alt="careold">
+                                <img src="assets/images/resources/service-2-3.jpg" alt="Household Duties Assistance by Nytingdale Care">
                             </div>
                             <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
                             <h3 class="service-two__item__title">
-                                <a href="service-d-disability.html">Disability Housing</a>
+                                <a href="service-d-disability.html">Household Duties Assistance</a>
                             </h3><!-- /.service-title -->
                             <p class="service-two__item__text">
-                                Lorem ipsum dolor sit amet lorem etur adipiscing elit sed do eiusmod
+                                Our caregivers assist with light housekeeping, laundry, meal preparation, and errands, helping maintain a clean and comfortable home environment for our clients in Pontyclun and Bridgend.
                             </p>
                             <a href="service-d-disability.html" class="service-two__item__link">
                                 Learn More
@@ -262,14 +260,14 @@ Pontyclun CF72 4AD
                         <div class="service-two__item wow fadeInUp" data-wow-delay="300ms">
                             <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
                             <div class="service-two__item__image">
-                                <img src="assets/images/resources/service-2-4.jpg" alt="careold">
+                                <img src="assets/images/resources/service-2-4.jpg" alt="Meal Preparation Services by Nytingdale Care">
                             </div>
                             <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
                             <h3 class="service-two__item__title">
-                                <a href="service-d-nursing.html">Nursing Care</a>
+                                <a href="service-d-nursing.html">Meal Preparation Assistance</a>
                             </h3><!-- /.service-title -->
                             <p class="service-two__item__text">
-                                Lorem ipsum dolor sit amet lorem etur adipiscing elit sed do eiusmod
+                                We prepare nutritious and delicious meals tailored to dietary needs and preferences, ensuring our clients in Pontyclun and Bridgend enjoy healthy and satisfying meals.
                             </p>
                             <a href="service-d-nursing.html" class="service-two__item__link">
                                 Learn More
@@ -281,14 +279,14 @@ Pontyclun CF72 4AD
                         <div class="service-two__item wow fadeInUp" data-wow-delay="400ms">
                             <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
                             <div class="service-two__item__image">
-                                <img src="assets/images/resources/service-2-5.jpg" alt="careold">
+                                <img src="assets/images/resources/service-2-5.jpg" alt="Grocery Shopping Assistance for Seniors in Bridgend">
                             </div>
                             <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
                             <h3 class="service-two__item__title">
-                                <a href="service-d-medical.html">Medical Checkup</a>
+                                <a href="service-d-medical.html">Grocery Shopping Assistance</a>
                             </h3><!-- /.service-title -->
                             <p class="service-two__item__text">
-                                Lorem ipsum dolor sit amet lorem etur adipiscing elit sed do eiusmod
+                                Nytingdale Care provides grocery shopping assistance, ensuring our clients have the food and supplies they need, with or without their accompaniment. Serving Bridgend and CF72.
                             </p>
                             <a href="service-d-medical.html" class="service-two__item__link">
                                 Learn More
@@ -300,14 +298,71 @@ Pontyclun CF72 4AD
                         <div class="service-two__item wow fadeInUp" data-wow-delay="500ms">
                             <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
                             <div class="service-two__item__image">
-                                <img src="assets/images/resources/service-2-6.jpg" alt="careold">
+                                <img src="assets/images/resources/service-2-6.jpg" alt="Social Activities and Companionship with Nytingdale Care">
                             </div>
                             <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
                             <h3 class="service-two__item__title">
-                                <a href="service-d-home.html">Home Aged Care</a>
+                                <a href="service-d-home.html">Social Activities & Companionship</a>
                             </h3><!-- /.service-title -->
                             <p class="service-two__item__text">
-                                Lorem ipsum dolor sit amet lorem etur adipiscing elit sed do eiusmod
+                                We offer companionship and escort services to social events, appointments, and outings, combating loneliness and promoting well-being for seniors in Pontyclun and surrounding areas.
+                            </p>
+                            <a href="service-d-home.html" class="service-two__item__link">
+                                Learn More
+                                <span class="service-two__item__link__icon"><i class="icon-right-arrow"></i></span>
+                            </a>
+                        </div><!-- /.service-card-two -->
+                    </div><!-- col-lg-4 col-md-6 -->
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service-two__item wow fadeInUp" data-wow-delay="300ms">
+                            <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
+                            <div class="service-two__item__image">
+                                <img src="assets/images/resources/service-2-4.jpg" alt="Companionship Care Services - Nytingdale Care">
+                            </div>
+                            <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
+                            <h3 class="service-two__item__title">
+                                <a href="service-d-nursing.html">Companionship Care</a>
+                            </h3><!-- /.service-title -->
+                            <p class="service-two__item__text">
+                                Combating loneliness and isolation, our companionship services provide social interaction, engaging activities, and emotional support for seniors in Pontyclun, Bridgend and surrounding areas.
+                            </p>
+                            <a href="service-d-nursing.html" class="service-two__item__link">
+                                Learn More
+                                <span class="service-two__item__link__icon"><i class="icon-right-arrow"></i></span>
+                            </a>
+                        </div><!-- /.service-card-two -->
+                    </div><!-- col-lg-4 col-md-6 -->
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service-two__item wow fadeInUp" data-wow-delay="400ms">
+                            <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
+                            <div class="service-two__item__image">
+                                <img src="assets/images/resources/service-2-5.jpg" alt="Live-In Care for Seniors - Nytingdale Care Bridgend">
+                            </div>
+                            <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
+                            <h3 class="service-two__item__title">
+                                <a href="service-d-medical.html">Live-In Care</a>
+                            </h3><!-- /.service-title -->
+                            <p class="service-two__item__text">
+                                For those requiring continuous support, our live-in care services provide 24/7 assistance and companionship, ensuring safety and well-being in the comfort of home in the CF72 area.
+                            </p>
+                            <a href="service-d-medical.html" class="service-two__item__link">
+                                Learn More
+                                <span class="service-two__item__link__icon"><i class="icon-right-arrow"></i></span>
+                            </a>
+                        </div><!-- /.service-card-two -->
+                    </div><!-- col-lg-4 col-md-6 -->
+                    <div class="col-lg-4 col-md-6">
+                        <div class="service-two__item wow fadeInUp" data-wow-delay="500ms">
+                            <div class="service-two__item__shape" style="background-image: url(assets/images/shapes/service-2-shape.png);"></div>
+                            <div class="service-two__item__image">
+                                <img src="assets/images/resources/service-2-6.jpg" alt="Respite Care & Sitting-In Support - Nytingdale Care">
+                            </div>
+                            <div class="service-two__item__number">Service</div><!-- /.service-two__item__number -->
+                            <h3 class="service-two__item__title">
+                                <a href="service-d-home.html">Sitting-in Support (Respite)</a>
+                            </h3><!-- /.service-title -->
+                            <p class="service-two__item__text">
+                                 We offer respite care, providing temporary relief for family caregivers, ensuring their loved ones receive continuous, compassionate care in Pontyclun and Bridgend.
                             </p>
                             <a href="service-d-home.html" class="service-two__item__link">
                                 Learn More
