--- a/nytingdalecare.co.uk-html/contact.html
+++ b/nytingdalecare.co.uk-html/contact.html
@@ -136,12 +136,11 @@ Pontyclun CF72 4AD
                                 <a href="#">Services</a>
                                 <ul>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-companion.html">Companion Care</a></li>
-                                    <li><a href="service-d-personalized.html">Personalized Care</a></li>
-                                    <li><a href="service-d-disability.html">Disability Housing</a></li>
-                                    <li><a href="service-d-nursing.html">Nursing Care</a></li>
-                                    <li><a href="service-d-medical.html">Medical Checkup</a></li>
+                                    <li><a href="service-d-companion.html">Personal Care Assistance</a></li>
+                                    <li><a href="service-d-personalized.html">Medication Support</a></li>
+                                    <li><a href="service-d-disability.html">Household Duties Assistance</a></li>
+                                    <li><a href="service-d-nursing.html">Meal Preparation</a></li>
+                                    <li><a href="service-d-medical.html">Grocery Shopping</a></li>
                                     <li><a href="service-d-home.html">Home Aged Care</a></li>
                                 </ul>
                             </li>                          
