--- a/nytingdalecare.co.uk-html/packages.html
+++ b/nytingdalecare.co.uk-html/packages.html
@@ -6,15 +6,13 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pricing Tables || Nytingdalecare || Home, Senior & Medical Care</title>
+    <title>Care Packages & Pricing in Pontyclun, Bridgend | Nytingdale Care</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png" />
     <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
-    <meta name="description" content="Careold is an amazing HTML designed template for all Senior Care & Medical, Elderly care, Orphanages, retirement home, elder living, palliative care, medical, healthcare, nursing home and any other caregiver or charity website." />
-
-    <!-- fonts -->
+    <meta name="description" content="Find affordable home care packages in Pontyclun & Bridgend. Nytingdale Care offers personalized senior care, medical support, and dementia care pricing. Contact us for a quote!" /><!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&amp;family=Urbanist:ital,wght@0,100..900;1,100..900&amp;display=swap" rel="stylesheet">
@@ -136,12 +134,11 @@ Pontyclun CF72 4AD
                                 <a href="#">Services</a>
                                 <ul>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-companion.html">Companion Care</a></li>
-                                    <li><a href="service-d-personalized.html">Personalized Care</a></li>
-                                    <li><a href="service-d-disability.html">Disability Housing</a></li>
-                                    <li><a href="service-d-nursing.html">Nursing Care</a></li>
-                                    <li><a href="service-d-medical.html">Medical Checkup</a></li>
+                                    <li><a href="service-d-companion.html">Personal Care Assistance</a></li>
+                                    <li><a href="service-d-personalized.html">Medication Support</a></li>
+                                    <li><a href="service-d-disability.html">Household Duties Assistance</a></li>
+                                    <li><a href="service-d-nursing.html">Meal Preparation</a></li>
+                                    <li><a href="service-d-medical.html">Grocery Shopping</a></li>
                                     <li><a href="service-d-home.html">Home Aged Care</a></li>
                                 </ul>
                             </li>
@@ -208,8 +205,8 @@ Pontyclun CF72 4AD
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="00ms">
                         <div class="package-card">
                             <div class="package-card__bg" style="background-image: url(../assets/images/shapes/package-card__bg.html);"></div>
-                            <div class="package-card__price">$49</div><!-- /.package-card__price -->
-                            <h3 class="package-card__title">Starter</h3><!-- /.package-card__title -->
+                            <div class="package-card__price">£49</div><!-- /.package-card__price -->
+                            <h3 class="package-card__title">Starter Home Care Package</h3><!-- /.package-card__title -->
                             <div class="package-card__period">Monthly</div>
                             <div class="package-card__border"></div>
                             <ul class="package-card__list">
@@ -224,8 +221,8 @@ Pontyclun CF72 4AD
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="100ms">
                         <div class="package-card">
                             <div class="package-card__bg" style="background-image: url(../assets/images/shapes/package-card__bg.html);"></div>
-                            <div class="package-card__price">$69</div><!-- /.package-card__price -->
-                            <h3 class="package-card__title">Classic</h3><!-- /.package-card__title -->
+                            <div class="package-card__price">£69</div><!-- /.package-card__price -->
+                            <h3 class="package-card__title">Classic Home Care Package</h3><!-- /.package-card__title -->
                             <div class="package-card__period">Monthly</div>
                             <div class="package-card__border"></div>
                             <ul class="package-card__list">
@@ -240,8 +237,8 @@ Pontyclun CF72 4AD
                     <div class="col-md-6 col-lg-4 wow fadeInUp" data-wow-delay="200ms">
                         <div class="package-card">
                             <div class="package-card__bg" style="background-image: url(../assets/images/shapes/package-card__bg.html);"></div>
-                            <div class="package-card__price">$99</div><!-- /.package-card__price -->
-                            <h3 class="package-card__title">Premium</h3><!-- /.package-card__title -->
+                            <div class="package-card__price">£99</div><!-- /.package-card__price -->
+                            <h3 class="package-card__title">Premium Home Care Package</h3><!-- /.package-card__title -->
                             <div class="package-card__period">Monthly</div>
                             <div class="package-card__border"></div>
                             <ul class="package-card__list">
@@ -261,16 +258,16 @@ Pontyclun CF72 4AD
             <div class="container">
                 <div class="row d-flex align-items-center">
                     <div class="col-lg-8 wow fadeInUp" data-wow-delay="00ms">
-                        <h3 class="cta-two__title sec-title__title bw-split-in-up">World-Class Customer<br> Support</h3><!-- /.cta-two__title -->
+                        <h3 class="cta-two__title sec-title__title bw-split-in-up">World-Class Customer<br> Support for Nytingdale Care Clients</h3><!-- /.cta-two__title -->
                         <p class="cta-two__text">
-                            Whether it's via chat, email, or over the phone, our team is always available to help.
+                            Whether it's via chat, email, or over the phone, our team is always available to help families and clients in Pontyclun, Bridgend, and surrounding areas.  We provide responsive and compassionate support for all your home care needs.
                         </p>
                     </div>
                     <div class="col-lg-4 wow fadeInUp" data-wow-delay="200ms">
                         <div class="cta-two__thumb">
-                            <img src="assets/images/resources/cta-2-1.jpg" alt="careold">
-                            <img src="assets/images/resources/cta-2-2.jpg" alt="careold">
-                            <img src="assets/images/resources/cta-2-3.jpg" alt="careold">
+                            <img src="assets/images/resources/cta-2-1.jpg" alt="Nytingdale Care caregiver providing support">
+                            <img src="assets/images/resources/cta-2-2.jpg" alt="Senior receiving compassionate care from Nytingdale Care">
+                            <img src="assets/images/resources/cta-2-3.jpg" alt="Family interacting with Nytingdale Care staff">
                             <div class="cta-two__thumb__more"><i class="icon-plus"></i></div>
                         </div>
                     </div>
@@ -287,10 +284,10 @@ Pontyclun CF72 4AD
                         <div class="col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="00ms">
                             <div class="footer-widget footer-widget--about">
                                 <a href="index.html" class="footer-widget__logo">
-                                    <img src="assets/images/logo-light.png" width="185" alt="Careold HTML Template">
+                                    <img src="assets/images/logo-light.png" width="185" alt="Nytingdale Care - Home, Senior & Medical Care in Pontyclun & Bridgend">
                                 </a>
                                 <p class="footer-widget__text">
-                                    We understand that choosing <br>the right care for yourself or your loved ones <br>is a significant decision.
+                                    We understand that choosing the right care for yourself or your loved ones in Pontyclun, Bridgend, and the surrounding CF72 area is a significant decision. Nytingdale Care provides compassionate home care, senior care, and medical support tailored to individual needs.
                                 </p>
                             </div><!-- /.footer-widget -->
                         </div><!-- /.col-md-6 -->
@@ -308,24 +305,24 @@ Pontyclun CF72 4AD
                         </div><!-- /.col-md-6 -->
                         <div class="col-md-6 col-xl-4 wow fadeInUp" data-wow-delay="200ms">
                             <div class="footer-widget footer-widget--post">
-                                <h2 class="footer-widget__title">Popular Post</h2><!-- /.footer-widget__title -->
+                                <h2 class="footer-widget__title">Latest News & Resources</h2><!-- /.footer-widget__title -->
                                 <ul class="list-unstyled">
                                     <li class="footer-widget--post__item">
                                         <div class="footer-widget--post__img">
-                                            <img src="assets/images/resources/footer-post-1.jpg" alt="post">
+                                            <img src="assets/images/resources/footer-post-1.jpg" alt="Choosing the right home care provider in Pontyclun">
                                         </div>
                                         <div class="footer-widget--post__content">
-                                            <span class="footer-widget--post__date"><i class="far fa-calendar"></i>23 jun 2024</span>
-                                            <h3 class="footer-widget--post__title"><a href="blog-details-right.html">We Around Easily Blog News</a></h3>
+                                            <span class="footer-widget--post__date"><i class="far fa-calendar"></i>23 Jun 2024</span>
+                                            <h3 class="footer-widget--post__title"><a href="blog-details-right.html">Choosing the Right Home Care in Pontyclun</a></h3>
                                         </div>
                                     </li>
                                     <li class="footer-widget--post__item">
                                         <div class="footer-widget--post__img">
-                                            <img src="assets/images/resources/footer-post-2.jpg" alt="post">
+                                            <img src="assets/images/resources/footer-post-2.jpg" alt="Understanding dementia care options in Bridgend">
                                         </div>
                                         <div class="footer-widget--post__content">
-                                            <span class="footer-widget--post__date"><i class="far fa-calendar"></i>23 jun 2024</span>
-                                            <h3 class="footer-widget--post__title"><a href="blog-details-right.html">In up So Discovery my Middleton</a></h3>
+                                            <span class="footer-widget--post__date"><i class="far fa-calendar"></i>23 Jun 2024</span>
+                                            <h3 class="footer-widget--post__title"><a href="blog-details-right.html">Dementia Care Options in Bridgend</a></h3>
                                         </div>
                                     </li>
                                 </ul><!-- /.list-unstyled -->
@@ -333,14 +330,14 @@ Pontyclun CF72 4AD
                         </div><!-- /.col-md-6 -->
                         <div class="col-md-6 col-xl-3 wow fadeInUp" data-wow-delay="300ms">
                             <div class="footer-widget footer-widget--mail">
-                                <h2 class="footer-widget__title">Newsletter</h2><!-- /.footer-widget__title -->
+                                <h2 class="footer-widget__title">Stay Informed with Nytingdale Care</h2><!-- /.footer-widget__title -->
                                 <p class="footer-widget__text">
-                                    Mental health and wellness tips, <br>our latest guides, resources, <br>and more.
+                                    Receive updates on home care, senior care, and medical care in Pontyclun, Bridgend & CF72.  Get helpful tips, resources, and the latest news from Nytingdale Care.
                                 </p>
                                 <form action="#" data-url="MAILCHIMP_FORM_URL" class="footer-widget__newsletter mc-form">
-                                    <input type="text" name="EMAIL" placeholder="Email Address">
+                                    <input type="email" name="EMAIL" placeholder="Your Email Address">
                                     <button type="submit" class="icon-up-right-arrow">
-                                        <span class="sr-only">submit</span><!-- /.sr-only -->
+                                        <span class="sr-only">Subscribe</span><!-- /.sr-only -->
                                     </button>
                                 </form><!-- /. mc-form -->
                                 <div class="mc-form__response"></div><!-- /.mc-form__response -->
