--- a/nytingdalecare.co.uk-html/team.html
+++ b/nytingdalecare.co.uk-html/team.html
@@ -136,12 +136,11 @@ Pontyclun CF72 4AD
                                 <a href="#">Services</a>
                                 <ul>
                                     <li><a href="services.html">Services</a></li>
-                                    <li><a href="services-carousel.html">Services Carousel</a></li>
-                                    <li><a href="service-d-companion.html">Companion Care</a></li>
-                                    <li><a href="service-d-personalized.html">Personalized Care</a></li>
-                                    <li><a href="service-d-disability.html">Disability Housing</a></li>
-                                    <li><a href="service-d-nursing.html">Nursing Care</a></li>
-                                    <li><a href="service-d-medical.html">Medical Checkup</a></li>
+                                    <li><a href="service-d-companion.html">Personal Care Assistance</a></li>
+                                    <li><a href="service-d-personalized.html">Medication Support</a></li>
+                                    <li><a href="service-d-disability.html">Household Duties Assistance</a></li>
+                                    <li><a href="service-d-nursing.html">Meal Preparation</a></li>
+                                    <li><a href="service-d-medical.html">Grocery Shopping</a></li>
                                     <li><a href="service-d-home.html">Home Aged Care</a></li>
                                 </ul>
                             </li>
@@ -408,15 +407,15 @@ Pontyclun CF72 4AD
                 <div class="row">
                     <div class="col-lg-6">
                         <div class="about-two__image wow fadeInLeft" data-wow-delay="00ms">
-                            <img src="assets/images/resources/about-2-1.jpg" alt="careold">
+                            <img src="assets/images/resources/about-2-1.jpg" alt="Nytingdale Care Team"> <!-- Updated alt text -->
                             <div class="about-two__image__experiance count-box wow fadeInUp" data-wow-delay="200ms">
-                                <h3 class="about-two__image__experiance__count"><span class="count-text" data-stop="20" data-speed="1500"></span>+</h3>
-                                <p class="about-two__image__experiance__text">Years Of Experience</p>
-                                <img src="assets/images/shapes/star.png" alt="careold">
+                                <h3 class="about-two__image__experiance__count"><span class="count-text" data-stop="20" data-speed="1500"></span>+</h3> <!-- Placeholder: Update with real number -->
+                                <p class="about-two__image__experiance__text">Years Of Experience</p> <!-- Placeholder:  Consider rewording -->
+                                <img src="assets/images/shapes/star.png" alt="Rating Star"> <!-- Updated alt text -->
                             </div><!-- about-two__experiance -->
                             <div class="about-two__image__ratings wow fadeInUp" data-wow-delay="300ms">
-                                <div class="about-two__image__ratings__icon"><img src="assets/images/shapes/star.png" alt="careold"></div>
-                                4.9 avg rating
+                                <div class="about-two__image__ratings__icon"><img src="assets/images/shapes/star.png" alt="Rating Star"></div> <!-- Updated alt text -->
+                                4.9 avg rating <!-- Placeholder: Verify and link if possible -->
                             </div>
                         </div><!-- /.about-two__image -->
                     </div><!-- /.col-lg-6 -->
@@ -424,36 +423,36 @@ Pontyclun CF72 4AD
                         <div class="about-two__content">
                             <div class="sec-title text-left">
 
-                                <div class="sec-title__tagline bw-split-in-up-fast"><span class="sec-title__tagline__border"></span>Know About us<span class="sec-title__tagline__border"></span></div><!-- /.sec-title__tagline -->
+                                <div class="sec-title__tagline bw-split-in-up-fast"><span class="sec-title__tagline__border"></span>About Our Team<span class="sec-title__tagline__border"></span></div><!-- /.sec-title__tagline --> <!-- Updated tagline -->
 
-                                <h3 class="sec-title__title bw-split-in-up">We Offer Expert Senior Care Services</h3><!-- /.sec-title__title -->
+                                <h3 class="sec-title__title bw-split-in-up">Meet the Caring Professionals of Nytingdale Care</h3><!-- /.sec-title__title --> <!-- Updated title -->
                             </div><!-- /.sec-title -->
                             <p class="about-two__content__text">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing do eiusmod tempor incididunt labore et dolore magna aliqua.
-                            </p>
+                                At Nytingdale Care, our team is comprised of dedicated, compassionate, and highly-trained caregivers, nurses, and support staff committed to providing exceptional home care services in Bridgend, Pontyclun, Llanilid, and the surrounding areas.
+                            </p> <!-- Updated paragraph text -->
                             <div class="about-two__content__box" style="--accent-color: #c4eee4">
                                 <div class="about-two__content__box__icon">
-                                    <i class="icon-old-man"></i>
+                                    <i class="icon-strategies"></i> <!-- Changed icon -->
                                     <span class="about-two__content__box__icon__zoom">
-                                        <i class="icon-old-man"></i>
+                                        <i class="icon-strategies"></i> <!-- Changed icon -->
                                     </span>
                                 </div>
-                                <h3 class="about-two__content__box__title">Strategies To Feel Better</h3>
-                                <p class="about-two__content__box__text">Lorem ipsum or lipsum as it is sometimes known</p>
+                                <h3 class="about-two__content__box__title">Expert Caregivers</h3> <!-- Updated heading -->
+                                <p class="about-two__content__box__text">Our caregivers are carefully selected, thoroughly vetted, and extensively trained to provide the highest quality of care.</p> <!-- Updated paragraph text -->
                             </div><!-- box -->
                             <div class="about-two__content__box" style="--accent-color: #f8ce75">
                                 <div class="about-two__content__box__icon">
-                                    <i class="icon-old-man"></i>
+                                     <i class="icon-care"></i>  <!-- Changed Icon-->
                                     <span class="about-two__content__box__icon__zoom">
-                                        <i class="icon-old-man"></i>
+                                        <i class="icon-care"></i> <!-- Changed Icon -->
                                     </span>
                                 </div>
-                                <h3 class="about-two__content__box__title">Complete Medical Suppyly</h3>
-                                <p class="about-two__content__box__text">Lorem ipsum or lipsum as it is sometimes known</p>
+                                <h3 class="about-two__content__box__title">Compassionate Support</h3> <!-- Updated heading -->
+                                <p class="about-two__content__box__text">We understand the importance of empathy and compassion in caregiving, and we treat every client with dignity and respect.</p> <!-- Updated paragraph text -->
                             </div><!-- box -->
                             <ul class="about-two__content__list">
-                                <li><span class="fas fa-check"></span>Lorem ipsum or lipsum as it is sometimes known</li>
-                                <li><span class="fas fa-check"></span>Professional gardening service for all your home</li>
+                                <li><span class="icon-check"></span>Extensive Training and Background Checks</li> <!-- Updated list item -->
+                                <li><span class="icon-check"></span>Commitment to Personalized Care</li> <!-- Updated list item -->
                             </ul>
                             <a href="about.html" class="careold-btn"><i>Learn More</i><span>Learn More</span></a>
                         </div><!-- /.why-choose-two__content -->
